--- a/app/src/main/res/menu/menu_action_button.xml
+++ b/app/src/main/res/menu/menu_action_button.xml
@@ -5,8 +5,19 @@
     <item android:id="@+id/action_search"
         android:title="@string/action_search"
         android:icon="@mipmap/ic_action_search"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
+    <item android:id="@+id/action_share"
+        android:title="@string/share"
+        app:showAsAction="ifRoom"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item android:id="@+id/action_tab_a"
+        android:title="@string/tab_a"
+        app:showAsAction="never" />
+    <item android:id="@+id/action_tab_b"
+        android:title="@string/tab_b"
         app:showAsAction="never" />
 </menu>
