--- a/app/src/main/res/layout/activity_action_button.xml
+++ b/app/src/main/res/layout/activity_action_button.xml
@@ -3,4 +3,15 @@
     android:id="@+id/view_pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.gongmingqm10.training.activity.ActionTabActivity" />
+    tools:context="net.gongmingqm10.training.activity.ActionTabActivity" >
+    <android.support.v4.view.PagerTabStrip
+        android:id="@+id/pager_title_strip"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_gravity="top"
+        android:background="@color/color_primary"
+        android:textColor="@color/white"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:gravity="center_vertical" />
+</android.support.v4.view.ViewPager>
