--- a/app/src/main/res/layout/activity_material_card.xml
+++ b/app/src/main/res/layout/activity_material_card.xml
@@ -1,12 +1,76 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="8dp"
+    android:orientation="vertical"
     tools:context="net.gongmingqm10.training.activity.MaterialCardActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="4dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardElevation="2dp" >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:id="@+id/card_image"
+                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/sample1"
+                />
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="Top 10 Australia Beaches"
+                android:layout_alignBottom="@id/card_image"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:background="#80000000" />
+            <TextView
+                android:id="@+id/card_description"
+                android:layout_below="@id/card_image"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:textColor="#212121"
+                android:text="@string/card_content_sample" />
+            <Button
+                android:id="@+id/card_share_btn"
+                android:layout_below="@id/card_description"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginRight="16dp"
+                android:text="SHARE"
+                android:textColor="#212121"
+                style="?android:attr/borderlessButtonStyle"
+                />
+            <Button
+                android:id="@+id/card_learn_more_btn"
+                android:layout_toRightOf="@id/card_share_btn"
+                android:layout_alignTop="@id/card_share_btn"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="LEARN MORE"
+                android:textColor="@color/color_primary"
+                style="?android:attr/borderlessButtonStyle"
+                />
+        </RelativeLayout>
 
-</RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
