--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,44 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <!-- The main content view -->
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/content_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:orientation="vertical"
         >
-        <include layout="@layout/toolbar"/>
+        <include layout="@layout/toolbar"
+            android:id="@+id/tool_bar"/>
         <FrameLayout
             android:id="@+id/content_frame"
+            android:layout_below="@id/tool_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-    </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floating_action_btn"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="20dp"
+            android:src="@mipmap/ic_room_white_48dp"
+            app:elevation="6dp"
+            app:borderWidth="0dp"
+            app:fabSize="mini"
+            />
+    </RelativeLayout>
     <!-- The navigation drawer -->
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="240dp"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/white_gray"
-        android:choiceMode="singleChoice" />
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer"/>
+
 </android.support.v4.widget.DrawerLayout>
