--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,41 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <!-- The main content view -->
-    <RelativeLayout
-        android:id="@+id/content_view"
-        android:layout_height="match_parent"
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_view"
         android:layout_width="match_parent"
-        >
-        <include layout="@layout/toolbar"
-            android:id="@+id/tool_bar"/>
+        android:layout_height="match_parent">
+
         <FrameLayout
             android:id="@+id/content_frame"
-            android:layout_below="@id/tool_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:fitsSystemWindows="true">
+            <include layout="@layout/toolbar"
+                android:id="@+id/tool_bar" />
+        </android.support.design.widget.AppBarLayout>
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floating_action_btn"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
             android:layout_margin="20dp"
             android:src="@mipmap/ic_room_white_48dp"
-            app:elevation="6dp"
             app:borderWidth="0dp"
-            app:fabSize="mini"
-            />
-    </RelativeLayout>
+            app:elevation="6dp"
+            app:fabSize="mini" />
+    </android.support.design.widget.CoordinatorLayout>
     <!-- The navigation drawer -->
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
@@ -39,6 +43,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer"/>
+        app:menu="@menu/drawer" />
 
 </android.support.v4.widget.DrawerLayout>
