--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -7,13 +7,13 @@
             android:title="Home" />
         <item android:id="@+id/a_fragment_item"
             android:icon="@mipmap/ic_description_black_24dp"
-            android:title="Music" />
+            android:title="Message" />
         <item android:id="@+id/b_fragment_item"
             android:icon="@mipmap/ic_bug_report_black_24dp"
-            android:title="Bug Report" />
+            android:title="Friends" />
         <item android:id="@+id/c_fragment_item"
             android:icon="@mipmap/ic_build_black_24dp"
-            android:title="Settings" />
+            android:title="Discussion" />
     </group>
     <item android:title="Map">
         <menu>
